--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -22,8 +22,8 @@
             </article>
         {% if page.cat %}            
             <div class="uk-animation-toggle" tabindex="0">
-                <div class="uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
-                    Для получения достоверной информации, Вам необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
+                <div class="uk-margin-large uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
+                        <span uk-icon="warning"></span> Для получения достоверной информации, необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
                 </div>
             </div>
         {% endif %}
