--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -20,9 +20,10 @@
                     {% endif %}
                     {{ content }}
             </article>
-        {% if page.cat %}            
+        {% if page.cat %}
+            <hr class="uk-margin-large"/>            
             <div class="uk-animation-toggle" tabindex="0">
-                <div class="uk-margin-large uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
+                <div class="uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
                         <span uk-icon="warning"></span> Для получения достоверной информации, необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
                 </div>
             </div>
