--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -22,7 +22,7 @@
                     {{ content }}
             </article>
         {% if page.cat %}
-            <hr class="uk-margin-large"/>            
+            <hr class="uk-margin-medium"/>            
             <div class="uk-animation-toggle" tabindex="0">
                 <div class="uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
                         <span uk-icon="warning"></span> Для получения достоверной информации, необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
