--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     {% include menu.html %}    
-    {% if page.cat > 0 and page.cat < 4 %}
+    {% if page.cat < 4 %}
         <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
     {% endif %}
 
