--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -24,7 +24,7 @@
         {% if page.cat %}
             <hr class="uk-margin-medium"/>            
             <div class="uk-animation-toggle" tabindex="0">
-                <div class="uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
+                <div class="uk-height-small uk-text-middle uk-background-primary uk-align-center uk-box-shadow-medium uk-animation-shake uk-text-center">
                         <span uk-icon="warning"></span> Для получения достоверной информации, необходимо профессионально обследовать ваш объект.<br>   Свяжитесь с нами!
                 </div>
             </div>
