--- a/_includes/el-slider.html
+++ b/_includes/el-slider.html
@@ -1,13 +1,14 @@
 
-<!-- (img/gal{{ page.sortid }})-->
+{% assign galpath = 'img/gal' | append: page.sortid %}
+<!-- >{{ galpath }}< -->
 <div uk-slider="autoplay: true;autoplay-interval: 1500">
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
         <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
             {% for i in site.static_files %}
                 <!-- i.path -->
-                {% if i.path contains 'img/gal{{ page.sortid }}' %}
+                {% if i.path contains galpath %}
                     <li>
-                        <img src="/img/gal{{ page.sortid }}/{{ i.name }}" alt="">
+                        <img src="/{{ galpath }}/{{ i.name }}" alt="">
                     </li>
                 {% endif %}
             {% endfor %}
