--- a/_includes/el-slider.html
+++ b/_includes/el-slider.html
@@ -3,7 +3,7 @@
 <!-- >{{ galpath }}< -->
 <div uk-slider="autoplay: true;autoplay-interval: 1500">
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-        <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
+        <ul class="uk-slider-items uk-child-width-1-{{ include.nimg | default: "3" }}">
             {% for i in site.static_files %}
                 {% if i.path contains galpath %}
                     <li>
