--- a/css/add.css
+++ b/css/add.css
@@ -8,3 +8,10 @@ p::after {
    display: block; 
    clear: both;
  }
+
+h6 {
+   visibility: hidden;
+   width: 0;
+   height: 0;
+   clear: both;
+ }
