--- a/css/add.css
+++ b/css/add.css
@@ -3,13 +3,8 @@ p>code {
    margin-left: 1.5em;
 }
 
-p::after { 
-   content: "";
-   display: block; 
-   clear: both;
- }
 
-h6 {
+ h6, .clear-both{
    visibility: hidden;
    width: 0;
    height: 0;
