--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -2,10 +2,10 @@
 <!-- uni layout -->
 <html>
 <head>
-    <link rel="stylesheet" href="css/uikit.min.css?{{site.time | date: '%s' }}" />
-    <link rel="stylesheet" href="css/add.css?{{site.time | date: '%s' }}" />
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
+    <link rel="stylesheet" href="/css/uikit.min.css?{{site.time | date: '%s' }}" />
+    <link rel="stylesheet" href="/css/add.css?{{site.time | date: '%s' }}" />
+    <script src="/js/uikit.min.js"></script>
+    <script src="/js/uikit-icons.min.js"></script>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
 </head>
