--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,4 +3,8 @@ layout: uni
 ---
 
 <!-- portfolio -->
+<img src="{{ page.cover}"}>
+<h3>{{ page.name }}</h3>
+<p>{{page.descriptio}}</p>
+
 {{ content }}
