--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,7 +3,7 @@ layout: uni
 ---
 
 <!-- portfolio -->
-<img src="{{ page.cover}"}>
+<img src="{{ page.cover}}">
 <h3>{{ page.name }}</h3>
 <p>{{page.descriptio}}</p>
 
