--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,7 +4,7 @@ layout: uni
 
 <!-- portfolio -->
 <img src="{{ page.cover}}">
-<h3>{{ page.name }}</h3>
+<h3>{{ page.caption }}</h3>
 <p>{{page.descriptio}}</p>
 
 {{ content }}
