--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,8 +3,8 @@ layout: uni
 ---
 
 <!-- portfolio -->
-<img src="{{ page.cover}}">
+<img src="{{ page.cover }}">
 <h3>{{ page.caption }}</h3>
-<p>{{page.descriptio}}</p>
+<p>{{ page.description }}</p>
 
 {{ content }}
