--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,9 @@
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
     <nav class="uk-navbar-container uk-margin" uk-navbar>
         <div class="uk-navbar-left">
-                <div class="uk-navbar-item uk-logo" data-src="/img/eagle.png" uk-img></div>
+                <div class="uk-navbar-item " data-src="" uk-img>
+                    <img src="/img/eagle.png" width="100">
+                </div>
         </div>
         <div class="uk-navbar-center nav-overlay">
             <ul class="uk-navbar-nav">
