--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -2,7 +2,7 @@
 layout: uni
 ---
 
-<!-- portfolio -->
+<!-- portfolio layout -->
 <img src="{{ page.cover }}">
 <h3>{{ page.caption }}</h3>
 <p>{{ page.description }}</p>
