--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,12 +9,19 @@
             <ul class="uk-navbar-nav">
                 {% assign sort_pages = site.pages | sort: "sortid" %}
                 {%- for p in sort_pages -%}
+                    {% capture menu_title %}
+                        {% if p.cat == "6.0" %}
+                            {{ p.title }} {{ site.data.var.phones[0] }}
+                        {% else %}
+                            {{ p.title }}
+                        {% endif %}
+                    {% endcapture %}
                     {% if p.main %}                        
                         <li class="uk-active">                            
                             <a href="{{ p.url }}" class="uk-button-text">{{ p.title }}
-                                {% if p.submenu %}
+                                {%- if p.submenu -%}
                                     <span uk-icon="chevron-down"></span>
-                                {% endif %}
+                                {%- endif -%}
                             </a>
                             {% if p.submenu %}
                                 <div class="uk-navbar-dropdown">
