--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -20,7 +20,7 @@
                     {%- if p.main -%}                        
                         <li class="uk-active">                            
                             <a href="{{ p.url }}" class="uk-button-text">
-                                <div>                                
+                                <div class="uk-text-center">                                
                                     {%- for line in menu_title -%}
                                         {%- if forloop.first == true -%}
                                             {{ line }}
