--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -1,5 +1,5 @@
 
-{% assign sort_pages = site.pages | where: "main" %}
+{% assign sort_pages = site.pages  %}
 <div class="uk-grid-match uk-grid-small uk-child-width-1-3 uk-padding" uk-grid>
 {% comment %}
         {% for p in sort_pages %}
