--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -1,7 +1,10 @@
 
 {% assign sort_pages = site.pages  %}
-<div class="uk-grid-match uk-grid-small uk-child-width-1-3 uk-padding" uk-grid>
+{% for p in sort_pages %}
+    <!-- {{ p.title }} -->
+{% endfor %}  
 {% comment %}
+<div class="uk-grid-match uk-grid-small uk-child-width-1-3 uk-padding" uk-grid>
         {% for p in sort_pages %}
             {% include el-card.html url=p.url img="/img/toplogo/{{ page.sortid }}.jpg" header=work.title text="" %} 
         {% endfor %}  
