--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -1,5 +1,5 @@
 
-{% assign sort_pages = site.pages  %}
+{% assign sort_pages = site.pages  | here_exp: "item", "item.sortid > 0" %}
 {% for p in sort_pages %}
     <!-- {{ p.title }} -->
 {% endfor %}  
