--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -1,7 +1,9 @@
 
-{% assign sort_pages = site.pages  | where_exp: "item", "item.sortid == '1.0'" %}
+{% assign sort_pages = site.pages  | sort: "sortid"  %}
 {% for p in sort_pages %}
+    {% if p.sortid == 1.0 or p.sortid == 2.0 or p.sortid == 3.0 %} 
     <!-- {{ p.title }} -->
+    {% endif %}
 {% endfor %}  
 {% comment %}
 <div class="uk-grid-match uk-grid-small uk-child-width-1-3 uk-padding" uk-grid>
