--- a/_includes/el-card.html
+++ b/_includes/el-card.html
@@ -2,7 +2,7 @@
     <a href="{{ include.url }}" class="uk-card uk-card-default uk-card-hover uk-card-small">        
         <div class="uk-card-media-top uk-inline">
             <img src="{{ include.img }}">
-            <div class="uk-overlay uk-light uk-overlay-primary uk-position-bottom-center">
+            <div class="uk-overlay uk-light uk-overlay-primary uk-position-bottom">
                 <h4> {{ include.header }} </h4>
             </div>
         </div>
