--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -14,11 +14,11 @@
     {% include menu.html %}   
 
     <main class="uk-container">
-        {% if page.cat < 3 %}
+        {% if page.cat < 3 and %}
             <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
         {% endif %}
         <article class="uk-article">
-                {% if page.cat != 0 %}
+                {% if page.cat == page.cat %}
                     <h1 class="uk-article-title">{{ page.title }}</h1>
                 {% endif %}
                 {{ content }}
