--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -18,7 +18,7 @@
             <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
         {% endif %}
         <article class="uk-article">
-                {% if page.cat == page.cat %}
+                {% if true %}
                     <h1 class="uk-article-title">{{ page.title }}</h1>
                 {% endif %}
                 {{ content }}
