--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -14,7 +14,7 @@
     {% include menu.html %}   
 
     <main class="uk-container">
-        {% if page.cat < 3 and %}
+        {% if false %}
             <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
         {% endif %}
         <article class="uk-article">
