--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -2,11 +2,17 @@
 {% assign sort_pages = site.pages  | sort: "sortid"  %}
     <div class="uk-grid-match uk-grid-small uk-child-width-1-3 uk-padding" uk-grid>
         {% for p in sort_pages %}
-            {% if p.sortid == 1.0 or p.sortid == 2.0 or p.sortid == 3.0 %} 
+            {%- if page.sortid == 0 -%}
+                {% if p.sortid != 1.0 and p.sortid != 2.0 and p.sortid != 3.0 %}
+                    {% continue %}
+                {% endif %} 
+            {%- elsif -%}
+            {%- endif -%}
+            
             <!-- {{ p.title }} -->
             {% capture imgurl %}/img/toplogo/{{ p.sortid }}.jpg{% endcapture %}
             {% include el-card.html url=p.url img=imgurl header=p.title text="" %} 
-            {% endif %}
+            
         {% endfor %}
     </div>  
 {% comment %}    
