--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -1,23 +1,39 @@
 
 {% assign sort_pages = site.pages  | sort: "sortid"  %}
-    <div class="uk-grid-match uk-grid-small uk-child-width-1-3 uk-padding" uk-grid>
+    
         {% for p in sort_pages %}
-            {%- if page.sortid == 0 -%}
-                {% if p.sortid != 1.0 and p.sortid != 2.0 and p.sortid != 3.0 %}
-                    {% continue %}
-                {% endif %} 
-            {%- elsif page.main and page.submenu -%}
-                {% if p.cat != page.cat or p.url == page.url %}
-                    {% continue %}
-                {% endif %} 
-            {%- endif -%}
-            
-            <!-- {{ p.title }} -->
-            {% capture imgurl %}/img/toplogo/{{ p.sortid }}.jpg{% endcapture %}
-            {% include el-card.html url=p.url img=imgurl header=p.title text="" %} 
-            
-        {% endfor %}
-    </div>  
+
+            {% if forloop.first %}
+                {% if page.cat == 1 %}
+                    {% assign wideclass = 'uk-child-width-1-5' %}
+                {%elsif page.cat == 2 %}
+                    {% assign wideclass = 'uk-child-width-1-2' %}
+                {% else %}
+                    {% assign wideclass = 'uk-child-width-1-3' %}    
+                {% endif %}
+
+                <div class="uk-grid-match uk-grid-small {{ wideclass }} uk-padding" uk-grid>
+            {% endif %}
+
+                {%- if page.sortid == 0 -%}
+                    {% if p.sortid != 1.0 and p.sortid != 2.0 and p.sortid != 3.0 %}
+                        {% continue %}
+                    {% endif %} 
+                {%- elsif page.main and page.submenu -%}
+                    {% if p.cat != page.cat or p.url == page.url %}
+                        {% continue %}
+                    {% endif %} 
+                {%- endif -%}
+                
+                <!-- {{ p.title }} -->
+                {% capture imgurl %}/img/toplogo/{{ p.sortid }}.jpg{% endcapture %}
+                {% include el-card.html url=p.url img=imgurl header=p.title text="" %} 
+
+            {% if forloop.last %}
+                </div>  
+            {% endif %}
+
+        {% endfor %}    
 {% comment %}    
 
 {% endcomment %}
