--- a/_includes/el-card.html
+++ b/_includes/el-card.html
@@ -10,6 +10,6 @@
             <div class="uk-card-body">    
                 <p> {{ include.text }} </p>
             </div>
-        {% enif %}        
+        {% endif %}        
     </a>
 </div>
