--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -27,7 +27,7 @@
                 
                 <!-- {{ p.title }} -->
                 {% capture imgurl %}/img/toplogo/{{ p.sortid }}.jpg{% endcapture %}
-                {% include el-card.html url=p.url img=imgurl header=p.title text="" %}          
+                {% include el-card.html url=p.url img=imgurl header=p.title %}          
 
         {% endfor %}
     </div>      
