--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -12,7 +12,7 @@
                     {% assign wideclass = 'uk-child-width-1-3@m' %}    
                 {% endif %}
 
-                <div class="uk-grid-match uk-grid-small uk-child-width-1-1@s {{ wideclass }}  uk-padding" uk-grid>
+                <div class="uk-grid-match uk-grid-small uk-child-width-1-1@s {{ wideclass }}  uk-padding uk-flex-around" uk-grid>
             {% endif %}
 
                 {%- if page.sortid == 0 -%}
