--- a/_includes/el-youtube.html
+++ b/_includes/el-youtube.html
@@ -1,6 +1,6 @@
 <div class="uk-inline" uk-lightbox>
     <a class="" href="https://www.youtube.com/watch?v={{ include.id }}" data-caption="YouTube">
-        <img src="https://img.youtube.com/vi/{{ include.id }/0.jpg">
+        <img src="https://img.youtube.com/vi/{{ include.id }}/0.jpg">
         <div class="uk-position-center">
             <span uk-icon="icon:play-circle; ratio:3"></span>
         </div>
