--- a/_includes/el-contact-form.html
+++ b/_includes/el-contact-form.html
@@ -3,6 +3,7 @@
   </div>
   <div id="modal-contact-form" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
+      <button class="uk-modal-close-default" type="button" uk-close></button>  
       <form class="uk-form-stacked">
   
         <div class="uk-margin">
