--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -5,7 +5,7 @@
 
             {% if forloop.first %}
                 {% if page.cat == 1 %}
-                    {% assign wideclass = 'uk-child-width-1-5@l uk-child-width-1-3@m' %}
+                    {% assign wideclass = 'uk-child-width-1-3@m' %}
                 {%elsif page.cat == 2 %}
                     {% assign wideclass = 'uk-child-width-1-3@m' %}
                 {% else %}
