--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -37,7 +37,7 @@
     </main>
     {{ site.time }}
     {% include footer.html %}
-    <script>
+    <script defer>
         function doFit(){
             textFit(document.querySelectorAll('.uk-overlay h4'));
         }
