--- a/_includes/el-contact-form.html
+++ b/_includes/el-contact-form.html
@@ -38,9 +38,9 @@
         </div>
   
         <div class="uk-margin uk-flex-center" uk-grid>
-          <button type="submit" class="uk-button uk-button-default uk-modal-close">Отправить</button>
+          <button type="submit" class="uk-button uk-button-default">Отправить</button>
         </div>
-        <input type="hidden" name="_gotyou"></input>
+        <input type="hidden" name="_gotyou">
       </form>
     </div>
   </div>
