--- a/_includes/el-contact-form.html
+++ b/_includes/el-contact-form.html
@@ -15,28 +15,28 @@
         <div class="uk-margin">
           <label class="uk-form-label" for="form-name">Ваше имя</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-name" type="text" placeholder="Ваше имя">
+            <input name="name" class="uk-input" id="form-name" type="text" placeholder="Ваше имя">
           </div>
         </div>
   
         <div class="uk-margin">
           <label class="uk-form-label" for="form-phone">Телефон</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-phone" type="tel" placeholder="Телефон" required>
+            <input name="phone" class="uk-input" id="form-phone" type="tel" placeholder="Телефон" required>
           </div>
         </div>
   
         <div class="uk-margin">
           <label class="uk-form-label" for="form-email">Почта</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-email" type="email" placeholder="Почта">
+            <input name="email" class="uk-input" id="form-email" type="email" placeholder="Почта">
           </div>
         </div>
   
         <div class="uk-margin">
           <label class="uk-form-label" for="form-coment">Комментарии</label>
           <div class="uk-form-controls">
-            <textarea class="uk-textarea" id="form-coment" type="text" placeholder="Комментарии"></textarea>
+            <textarea name="coment" class="uk-textarea" id="form-coment" type="text" placeholder="Комментарии"></textarea>
           </div>
         </div>
   
@@ -62,6 +62,7 @@
         var response = JSON.parse(xhr.response);
   
         if (xhr.status === 200) {
+          UIkit.modal(document.getElementById('modal-contact-form')).hide();
           UIkit.notification({
             message: 'Успешно отправлено!',
             status: 'success',
