--- a/_includes/el-contact-form.html
+++ b/_includes/el-contact-form.html
@@ -1,5 +1,5 @@
-<div class="uk-margin uk-flex-center" uk-grid>
-  <button uk-scrollspy="cls:uk-animation-slide-top" class="uk-button uk-button-primary uk-button-large uk-margin-small-right uk-animation-shake" type="button" uk-toggle="target: #modal-contact-form">
+<div uk-scrollspy="cls:uk-animation-slide-top; repeat: true" class="uk-margin uk-flex-center uk-animation-toggle" uk-grid tabindex="0">
+  <button  class="uk-button uk-button-primary uk-button-large uk-animation-shake uk-box-shadow-large" type="button" uk-toggle="target: #modal-contact-form">
     {%- if include.icon -%}  
       <span uk-icon="{{ include.icon }}"></span>
     {%- endif -%} 
