--- a/_includes/el-contact-form.html
+++ b/_includes/el-contact-form.html
@@ -10,7 +10,7 @@
   <div id="modal-contact-form" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
       <button class="uk-modal-close-default" type="button" uk-close></button>  
-      <form class="uk-form-stacked" action="https://app.form2chat.io/f/95bac658" method="POST" accept-charset="UTF-8" id="contact-form">
+      <form class="uk-form-stacked" action="https://app.form2chat.io/f/95bac658.json" method="POST" accept-charset="UTF-8" id="contact-form">
   
         <div class="uk-margin">
           <label class="uk-form-label" for="form-name">Ваше имя</label>
