--- a/_includes/el-contact-form.html
+++ b/_includes/el-contact-form.html
@@ -62,7 +62,7 @@
         var response = JSON.parse(xhr.response);
         console.log(xhr.status);
   
-        if (xhr.status === 200) {
+        if (xhr.status >= 200 and xhr.status < 300) {
           UIkit.modal(document.getElementById('modal-contact-form')).hide();
           UIkit.notification({
             message: 'Успешно отправлено!',
