--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -42,6 +42,7 @@
             textFit(document.querySelectorAll('.uk-overlay h4'));
         }
         window.onresize = doFit;
+        UIkit.util.on(document, 'DOMContentLoaded',doFit);
         document.addEventListener("DOMContentLoaded",doFit);
         doFit();
     </script>   
