--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -97,14 +97,14 @@
             UIkit.notification({
                 message: 'Успешно отправлено!',
                 status: 'success',
-                pos: 'top-right',
+                pos: 'bottom-right',
                 timeout: 5000
             });
             } else {
             UIkit.notification({
                 message: 'Ошибка!',
                 status: 'danger',
-                pos: 'top-right',
+                pos: 'bottom-right',
                 timeout: 5000
             });
             }
@@ -117,9 +117,10 @@
         function doFit(){
             textFit(document.querySelectorAll('.uk-overlay h4'));
         }
+        window.onload = doFit;
         window.onresize = doFit;
-        UIkit.util.on(document, 'DOMContentLoaded',doFit);
-        //document.addEventListener("DOMContentLoaded",doFit);
+        //UIkit.util.on(document, 'DOMContentLoaded',doFit);
+        document.addEventListener("DOMContentLoaded",doFit);
         //doFit();
     </script>   
 </body>
