--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -114,8 +114,10 @@
         };
     </script>
     <script defer>
+        document.addEventListener('readystatechange', () => console.log(document.readyState));
         function doFit(){
             textFit(document.querySelectorAll('.uk-overlay h4'));
+            console.log('doFit');
         }
         window.onload = doFit;
         window.onresize = doFit;
