--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -116,14 +116,14 @@
     <script defer>
         document.addEventListener('readystatechange', () => console.log(document.readyState));
         function doFit(){
-            textFit(document.querySelectorAll('.uk-overlay h4'));
             console.log('doFit');
+            textFit(document.querySelectorAll('.uk-overlay h4'));            
         }
         window.onload = doFit;
         window.onresize = doFit;
         //UIkit.util.on(document, 'DOMContentLoaded',doFit);
         document.addEventListener("DOMContentLoaded",doFit);
-        //doFit();
+        if (document.readyState == 'complete') doFit();
     </script>   
 </body>
 </html>
