--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 ﻿<!-- footer -->
 <div class="uk-section uk-section-default uk-background-cover" style="background-image: url(/img/footer.jpg)">
-    <div class="uk-container" >
+    <div class="uk-container uk-text-emphasis uk-link-text" >
         <div class="uk-grid-divider uk-grid uk-child-width-1-3" uk-grid>
             <div class="">  
                     {% include include_md.html file_name="about.md" %}                
