--- a/_includes/el-card.html
+++ b/_includes/el-card.html
@@ -1,5 +1,5 @@
 <div class="uk-animation-toggle">
-    <a href="{{ include.url }}" class="uk-card uk-card-default uk-card-hover uk-card-small uk-animation-scale-up">        
+    <a href="{{ include.url }}" class="uk-card uk-card-default uk-card-hover uk-card-small uk-animation-fade">        
         <div class="uk-card-media-top uk-inline">
             <img src="{{ include.img }}">
             <div class="uk-overlay uk-light uk-overlay-primary uk-position-bottom uk-text-nowrap uk-text-center">
