--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -9,6 +9,7 @@
     <script src="/js/textFit.min.js"></script>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    {% seo %}
 </head>
 <body>
     <!-- uni layout -->
