--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -9,7 +9,7 @@
     <script src="/js/textFit.min.js"></script>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    {% seo %}
+    {% seo title=false %}
 </head>
 <body>
     <!-- uni layout -->
