--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -21,6 +21,7 @@
         {% endif %}
         <article class="uk-article">
                 {% if page.cat == 0 %}
+                <!-- pc={{page.cat}} -->
                     <h1 class="uk-article-title">{{ site.title }}</h1>
                 {% else %}
                     <h1 class="uk-article-title">{{ page.title }}</h1>
