--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,5 +34,5 @@
             </div>
         </div>
     </div>
-    {{ site.time }}
+    <div class="uk-text-muted uk-text-right">{{ site.time }}</div>
 </div>
