--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -15,28 +15,27 @@
     <!-- uni layout -->
     {% include menu.html %}   
 
-    <main class="uk-container">
-        {% if false %}
+    <div class="uk-section uk-section-default">
+        <div class="uk-container"> 
+            {% comment %}
             <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
-        {% endif %}
-        <div class="uk-section uk-section-default">
-            <div class="uk-container">        
-                {% if page.cat == 0 %}
-                <!-- pc={{page.cat}} -->
+            {% endcomment %}               
+                {% if page.cat == 0 %}               
                     <h1 class="uk-article-title">{{ site.title }}</h1>
                 {% else %}
                     <h1 class="uk-article-title">{{ page.title }}</h1>
                 {% endif %}
+                
                 {{ content }}
-            </div>
+
+                {% if page.cat %}     
+                    <div class="uk-text-primary uk-text-middle uk-align-center uk-text-center">
+                        <span uk-icon="warning"></span> Для получения достоверной информации, необходимо профессионально обследовать ваш объект.                
+                        {% include el-contact-form.html %}
+                    </div>            
+                {% endif %}
         </div>
-        {% if page.cat %}     
-            <div class="uk-text-primary uk-text-middle uk-align-center uk-text-center">
-                <span uk-icon="warning"></span> Для получения достоверной информации, необходимо профессионально обследовать ваш объект.                
-                {% include el-contact-form.html %}
-            </div>            
-        {% endif %}
-    </main>    
+    </div>    
     {% include footer.html %}
     <div id="modal-contact-form" uk-modal>
         <div class="uk-modal-dialog uk-modal-body">
