--- a/_includes/i-sect-end-start.html
+++ b/_includes/i-sect-end-start.html
@@ -1,2 +1,4 @@
+<!-- section end -->
+</div></div>
 <!-- section start -->
 <div class="uk-section {{ include.sectclass |default: 'uk-section-default' }}"><div class="uk-container" markdown="1">
