--- a/_includes/i-sect-end-start.html
+++ b/_includes/i-sect-end-start.html
@@ -1,4 +1,7 @@
+{::nomarkdown}
 <!-- prev section end -->
 </div></div>
 <!-- new section start -->
-<div class="uk-section {{ include.sectclass |default: 'uk-section-default' }}"><div class="uk-container" markdown="1">
+<div class="uk-section {{ include.sectclass |default: 'uk-section-default' }}">
+<div class="uk-container" markdown="1">
+{:/}
